Finished first class in the Python language.

--- a/notebooks/00-Intoduction to the Python language.ipynb
+++ b/notebooks/00-Intoduction to the Python language.ipynb
@@ -812,6 +812,213 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Defining functions\n",
+    "\n",
+    "### Function definition\n",
+    "    def test():\n",
+    "        print('in test function')\n",
+    "\n",
+    "    >>> test()\n",
+    "    in test function\n",
+    "\n",
+    "Warning: Function blocks must be indented as other control-flow blocks.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Return statement\n",
+    "\n",
+    "Functions can *optionally* return values.\n",
+    "\n",
+    "\n",
+    "    >>> def disk_area(radius):\n",
+    "       ...:     return 3.14 * radius * radius\n",
+    "       ...:\n",
+    "\n",
+    "    >>> disk_area(1.5)\n",
+    "    >>> 7.0649999999999995\n",
+    "\n",
+    "Note: By default, functions return ``None``.\n",
+    "\n",
+    "The syntax to define a function:\n",
+    "\n",
+    "    * the ``def`` keyword;\n",
+    "\n",
+    "    * is followed by the function's **name**, then\n",
+    "\n",
+    "    * the arguments of the function are given between parentheses followed\n",
+    "      by a colon.\n",
+    "\n",
+    "    * the function body;\n",
+    "\n",
+    "    * and ``return object`` for optionally returning values.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Parameters\n",
+    "\n",
+    "Mandatory parameters (positional arguments)\n",
+    "\n",
+    "\n",
+    "    >>> def double_it(x):\n",
+    "       ....:     return x * 2\n",
+    "       ....:\n",
+    "\n",
+    "    >>> double_it(3)\n",
+    "    >>> 6\n",
+    "\n",
+    "    >>> double_it()\n",
+    "    ---------------------------------------------------------------------------\n",
+    "    Traceback (most recent call last):\n",
+    "      File \"<stdin>\", line 1, in <module>\n",
+    "    TypeError: double_it() takes exactly 1 argument (0 given)\n",
+    "\n",
+    "Optional parameters (keyword or named arguments)\n",
+    "\n",
+    "\n",
+    "    >>> def double_it(x=2):\n",
+    "       ....:     return x * 2\n",
+    "       ....:\n",
+    "\n",
+    "    >>> double_it()\n",
+    "    >>> 4\n",
+    "\n",
+    "    >>> double_it(3)\n",
+    "    >>> 6\n",
+    "\n",
+    "Keyword arguments allow you to specify *default values*.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise: compute the 20-th Fibonacci number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Object-oriented programming (OOP)\n",
+    "\n",
+    "Python supports object-oriented programming (OOP). The goals of OOP are:\n",
+    "\n",
+    "    * to organize the code, and\n",
+    "\n",
+    "    * to re-use code in similar contexts.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Here is a small example: we create a Student *class*, which is an object\n",
+    "gathering several custom functions (*methods*) and variables (*attributes*),\n",
+    "we will be able to use::\n",
+    "\n",
+    "    >>> class Student(object):\n",
+    "    ...     def __init__(self, name):\n",
+    "    ...         self.name = name\n",
+    "    ...     def set_age(self, age):\n",
+    "    ...         self.age = age\n",
+    "    ...     def set_major(self, major):\n",
+    "    ...         self.major = major\n",
+    "    ...\n",
+    "    >>> anna = Student('anna')\n",
+    "    >>> anna.set_age(21)\n",
+    "    >>> anna.set_major('physics')\n",
+    "\n",
+    "In the previous example, the Student class has ``__init__``, ``set_age`` and\n",
+    "``set_major`` methods. Its attributes are ``name``, ``age`` and ``major``. We\n",
+    "can call these methods and attributes with the following notation:\n",
+    "``classinstance.method`` or  ``classinstance.attribute``.  The ``__init__``\n",
+    "constructor is a special method we call with: ``MyClass(init parameters if\n",
+    "any)``.\n",
+    "\n",
+    "Now, suppose we want to create a new class MasterStudent with the same\n",
+    "methods and attributes as the previous one, but with an additional\n",
+    "``internship`` attribute. We won't copy the previous class, but\n",
+    "**inherit** from it::\n",
+    "\n",
+    "    >>> class MasterStudent(Student):\n",
+    "    ...     internship = 'mandatory, from March to June'\n",
+    "    ...\n",
+    "    >>> james = MasterStudent('james')\n",
+    "    >>> james.internship\n",
+    "    'mandatory, from March to June'\n",
+    "    >>> james.set_age(23)\n",
+    "    >>> james.age\n",
+    "    23"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise: define a class for an integer number with methods ```add``` and ```substract``` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
