--- a/01-Introduction to scikit-learn.ipynb
+++ b/01-Introduction to scikit-learn.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We followed the material at https://github.com/savarin/python_for_ml"
+    "## In this session we followed the material at https://github.com/savarin/python_for_ml"
    ]
   },
   {
