--- a/02-Supervised learning I.ipynb
+++ b/02-Supervised learning I.ipynb
@@ -108,7 +108,7 @@
     "\n",
     "# plotting, set up plotly offline\n",
     "from plotly.offline import iplot, init_notebook_mode\n",
-    "init_notebook_mode(connected=False)\n",
+    "init_notebook_mode()\n",
     "import plotly.graph_objs as go\n",
     "\n",
     "# numpy\n",
