--- a/02-Supervised learning I.ipynb
+++ b/02-Supervised learning I.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "<small><i>This notebook was put together by Fabian Pedregosa based on work by [Jake Vanderplas](http://www.vanderplas.com).</i></small>"
    ]
   },
@@ -971,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -982,20 +983,10 @@
      "text": [
       "(1347, 64) (450, 64)\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/fabianpedregosa/dev/scikit-learn/sklearn/cross_validation.py:43: DeprecationWarning:\n",
-      "\n",
-      "This module has been deprecated in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "\n"
-     ]
     }
    ],
    "source": [
-    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n",
     "Xtrain, Xtest, ytrain, ytest = train_test_split(\n",
     "    digits.data, digits.target, random_state=2)\n",
     "print(Xtrain.shape, Xtest.shape)"
