--- a/02-Supervised learning I.ipynb
+++ b/02-Supervised learning I.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Warning: Since github doesn't display interactive plots, make sure you are [viewing this notebook using nbviewer](https://nbviewer.jupyter.org/github/fabianp/mash_2016_sklearn_intro/blob/master/02-Supervised%20learning%20I.ipynb).\n",
     "\n",
     "<small><i>This notebook was put together by Fabian Pedregosa based on work by [Jake Vanderplas](http://www.vanderplas.com).</i></small>"
    ]
@@ -319,6 +320,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Each class can have different estimated parameters and they are named differently.At some point you will probably forget their names: fortunately, ipython has the tab-complete feature that makes introspection easy. Try it out!\n",
+    "\n",
     "The great thing now is that we can use this model to \"predict\":"
    ]
   },
