--- a/02-Supervised learning I.ipynb
+++ b/02-Supervised learning I.ipynb
@@ -322,7 +322,9 @@
    "source": [
     "Each class can have different estimated parameters and they are named differently.At some point you will probably forget their names: fortunately, ipython has the tab-complete feature that makes introspection easy. Try it out!\n",
     "\n",
-    "The great thing now is that we can use this model to \"predict\":"
+    "Also, scikit-learn comes with excellent documentation: both [reference documentation](http://scikit-learn.org/stable/modules/classes.html) and [examples](http://scikit-learn.org/stable/auto_examples/index.html).\n",
+    "\n",
+    "Coming back to our recently trained model, the great thing now is that we can use this model to \"predict\". We will see why this is great in the next section."
    ]
   },
   {
@@ -345,13 +347,6 @@
    ],
    "source": [
     "lin_reg.predict(X)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will see how to use this in the next section."
    ]
   },
   {
