--- a/02-Supervised learning I.ipynb
+++ b/02-Supervised learning I.ipynb
@@ -14,7 +14,9 @@
     "\n",
     "In this session we will dive into the basic principles of machine learning, and how to utilize them via the Scikit-Learn API.\n",
     "\n",
-    "After briefly introducing scikit-learn's *Estimator* object, we'll cover **supervised learning**, including *classification* and *regression* problems. By the end of the c"
+    "After briefly introducing scikit-learn's *Estimator* object, we'll cover **supervised learning**, including *classification* and *regression* problems. By the end of the course, you should be able to build a classifier capable of discriminating different classes of faces:\n",
+    "\n",
+    "![](https://raw.githubusercontent.com/fabianp/mash_2016_sklearn_intro/master/images/lfw.png)"
    ]
   },
   {
@@ -1180,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -1200,31 +1202,34 @@
     }
    ],
    "source": [
+    "# get the data\n",
     "from sklearn.datasets import fetch_lfw_people\n",
     "lfw_people = fetch_lfw_people(min_faces_per_person=70, resize=0.4)\n",
+    "X = lfw_people.data\n",
+    "y = lfw_people.target\n",
     "\n",
+    "# print the names\n",
     "for name in lfw_people.target_names:\n",
-    "    print(name)"
+    "    print(name)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5749,)"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": []
   },
   {
