--- a/03-Model Selection.ipynb
+++ b/03-Model Selection.ipynb
@@ -813,6 +813,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pipelines or combining different classifiers\n",
+    "\n",
+    "At some point, you might want to combine some preprocessing (like feature selection) with a classifier. It is possible to do this manually:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+       "          verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get some data\n",
+    "from sklearn import datasets\n",
+    "digits = datasets.load_digits()\n",
+    "X = digits.data\n",
+    "y = digits.target\n",
+    "\n",
+    "\n",
+    "from sklearn import decomposition\n",
+    "# select only 10 features\n",
+    "pca = decomposition.PCA(n_components=10)\n",
+    "X_trans = pca.fit_transform(X)\n",
+    "\n",
+    "# now train the classifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "clf = LogisticRegression()\n",
+    "clf.fit(X_trans, y)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But this soon becomes tedious when dealing with cross-validation. A better solution is to create a Pipeline:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.928213689482\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.pipeline import make_pipeline\n",
+    "clf = make_pipeline(decomposition.PCA(n_components=10), LogisticRegression())\n",
+    "clf.fit(X, y)\n",
+    "print(clf.score(X, y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise\n",
+    "\n",
+    "Create a Pipeline with PCA and LogisticRegression and find the optimal number of dimensions (```n_components```) by cross-validation using GridSearchCV."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Summary\n",
     "\n",
     "We've gone over several useful tools for model validation\n",
@@ -834,8 +928,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<small><i>This notebook was put together by [Jake Vanderplas](http://www.vanderplas.com). Source and license info is on [GitHub](https://github.com/jakevdp/sklearn_tutorial/).</i></small>"
+    "<small><i>This notebook was put together by Fabian Pedregosa based on work by [Jake Vanderplas](http://www.vanderplas.com).</i></small>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
