--- a/03-Model Selection.ipynb
+++ b/03-Model Selection.ipynb
@@ -13,14 +13,12 @@
    "source": [
     "Previously we saw the main API shared by objects in scikit-learn and a couple of estimators, notably logistic regression and K-nearest neighbors.\n",
     "\n",
-    "In this session we will take a look atmodel selection, one of the most important aspects of applied machine learning.\n",
-    "\n",
-    "But first, we will see a object a bit more in detail: **Decision Trees**."
+    "In this session we will take a look atmodel selection, one of the most important aspects of applied machine learning."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -916,7 +914,7 @@
    "source": [
     "### Exercise\n",
     "\n",
-    "Create a Pipeline with PCA and LogisticRegression and find the optimal number of dimensions (```n_components```) by cross-validation using GridSearchCV."
+    "Create a Pipeline with PCA and LogisticRegression, plot performance as the number of dimensions (```n_components```) by cross-validation and get the optimum using GridSearchCV."
    ]
   },
   {
