--- a/05-Data challenge.ipynb
+++ b/05-Data challenge.ipynb
@@ -3693,7 +3693,7 @@
     "What we have done here might give you are reasonable baseline, but in order to get a model that is truly competitive you will need a combination of:\n",
     "\n",
     "   * **Feature engineering**. In this dataset, we don't have information on where the variables come from. In other cases we might be able to reason and construct meaningful features.\n",
-    "   * **Exploration** . Be curious, explore the scikit-leran (or other library's) API, learn and get [inspired by others](https://www.kaggle.com/forums). Other great machine learning libraries beyond scikit-learn are [XGBoost](https://xgboost.readthedocs.io/en/latest/) and [Keras](https://keras.io) for deep learning.\n",
+    "   * **Exploration** . Be curious, explore the scikit-learn (or other library's) API, learn and get [inspired by others](https://www.kaggle.com/forums). Other great machine learning libraries beyond scikit-learn are [XGBoost](https://xgboost.readthedocs.io/en/latest/) and [Keras](https://keras.io) for deep learning.\n",
     "   * **Question yourself**. Am I optimizing the right quantity? Am I using the right features? Am I considering the right model? Why?"
    ]
   },
