--- a/07-PCA.ipynb
+++ b/07-PCA.ipynb
@@ -562,6 +562,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Preprocessing\n",
+    "- scaling: http://scikit-learn.org/stable/modules/preprocessing.html\n",
+    "- normalization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Related applications\n",
     "- dimensionality reduction\n",
     "- recommendation systems (collaborative filtering), look at SVD++ (https://github.com/gpfvic/IRR/blob/master/Factorization%20meets%20the%20neighborhood-%20a%20multifaceted%20collaborative%20filtering%20model.pdf)\n",
