started work on deep learning

--- a/08-Feature_extraction.ipynb
+++ b/08-Feature_extraction.ipynb
@@ -9,7 +9,11 @@
     "\n",
     "As you have experienced from the challenge, large performance gains can be expected by constructing meaningful features from the data. \n",
     "\n",
-    "<img style=\"float: left; width: 50px\" src=\"https://cdn1.iconfinder.com/data/icons/hawcons/32/700303-icon-61-warning-128.png\" /> The process of constructing meaningful features from the data is unfortunately domain-specific (unless if you have millions of samples in which case you might be able to automate the process). Here are some strategies to turn unstructed data items into arrays of numerical features.\n",
+    "<img style=\"float: left; width: 50px; margin-top: -20px\" src=\"https://cdn1.iconfinder.com/data/icons/hawcons/32/700303-icon-61-warning-128.png\" /> Feature extraction should not be mistaken with feature _selection_. Both are very different steps in the learning pipeline.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "The process of constructing meaningful features from the data is unfortunately domain-specific (unless if you have millions of samples in which case you might be able to automate the process). Here are some strategies to turn unstructed data items into arrays of numerical features.\n",
     "\n",
     "  * **Text documents**:\tthe raw data, a sequence of symbols cannot be fed directly to the algorithms themselves as most of them expect numerical feature vectors with a fixed size rather than the raw text documents with variable length. A popular strategy consists in counting the frequency of each word or pair of consecutive words in each document, which we will see in more detail in this class.\n",
     "\n",
