--- a/10-deep_learning.ipynb
+++ b/10-deep_learning.ipynb
@@ -568,6 +568,8 @@
     " \n",
     " * The code below will generate the features for the train set and save it to the file ```bottleneck_features_train.npy``` and ```bottleneck_features_test.npy```.\n",
     "\n",
+    " * Construct a shallow network that uses these features to predict cat/dog (this is the part that you need to code :-).\n",
+    "\n",
     "People have posted pretrained networks https://gist.github.com/baraldilorenzo/07d7802847aaad0a35d3"
    ]
   },
